--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title>John Chiodo's Page</title>
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
-	</head>
+<head>
+<meta charset="utf-8" />
+<title>Professional Resume</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>
 	
-	<body>
-	<p>some text here.</p>
-	</body>
+<body>
+<h1>Professional Resume</h1>
+	<section id="workhistory">
+		<h2>Work History List</h2>
+		<ul>
+			<li>HCL America</li>
+			<li>Alcatel-Lucent Technologies</li>
+			<li>AT&amp;T Bell Labs</li>
+        	</ul>
+	</section>
+</body>
 
 </html>
