--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,14 @@
 </head>
 	
 <body>
-<h1>Professional Resume</h1>
-	<section id="skillSummary"> <!-- plan to make table -->
+    <section id="personal_info">
+        <p>John Chiodo<br>
+        Aurora, IL. 60504<br>
+        jchiodo5804@gmail.com<br>
+        (630) 555-1212<br>
+        </p>
+    </section>
+	<section id="skillSummary"> <!-- plan to make table with these -->
 		<h2>Skill Summary</h2>
 		<ul>
             <li>Functional Requirements testing</li>
@@ -46,7 +52,7 @@
     <p>1xEV-DO Applications (Qchat and VOIP) Software Development and Testing – 2004-2011</p>
     </section>
      <section id="ALU_experience"> <!-- these are long, maybe will shorten -->
-                                   <!-- and expand on page2 -->
+                                   <!-- and expand with links on page2 -->
          <p>
              <ul>
                  <li>
@@ -77,4 +83,3 @@
         </section>
     </body>
 </html>
-
