--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Professional Resume</title>
+<title>Professional Web Presence</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 	
@@ -14,72 +14,10 @@
         (630) 555-1212<br>
         </p>
     </section>
-	<section id="skillSummary"> <!-- plan to make table with these -->
-		<h2>Skill Summary</h2>
-		<ul>
-            <li>Functional Requirements testing</li>
-            <li>Test Plans and Cases</li>
-            <li>Scripting and Documentation</li>
-            <li>Regression and Adversarial testing</li>
-            <li>Testing Automation</li>
-            <li>Hardware Development background</li>
-            <li>Performance/Load/Stress testing</li>
-            <li>Defect/Bug Tracking</li>
-            <li>Tool development</li>
-        </ul>
-	</section>
-<h1>Professional Experience</h1>
-    <section id="HCL">
-        <p>HCL America 2011-present</p>
-    </section>  
-    <section id="HCL_date">
-        <p>EVDO Network Level Testing (NLT) – 2011-present</p>
-    </section> 
-    <section id="HCL_experience">
-        <p> EVDO Call model Development – Developed, maintained and executed NLT 1xEV-DO call
-        loads testing using in-house call load generators to mimic customer field offices.</p>
-        <ul>
-            <li>Develop and test call models to utilize a scaled down model of the 
-                customer’s site.</li>
-            <li>Analyze results and provide call load for testers on the team.</li>
-            <li>Maintain call load generators servers on virtual servers.</li>
-        </ul>
-    </section>
-    <section id="ALU">
-    <p>Alcatel-Lucent Technologies</p>
-    </section>
-    <section id="ALU_date">
-    <p>1xEV-DO Applications (Qchat and VOIP) Software Development and Testing – 2004-2011</p>
-    </section>
-     <section id="ALU_experience"> <!-- these are long, maybe will shorten -->
-                                   <!-- and expand with links on page2 -->
-         <p>
-             <ul>
-                 <li>
-                     Capacity, Performance and Resiliency (CPR) testing for 1xEV-DO product:  Created and executed tests covering fault recovery, regression, application processor and traffic processor overload scenarios. Using a combination of load generators (simulated mobiles) and field grade mobiles to uncover and identify software problems.
-                 </li>                 
-                 <li> 
-                     Motorola Push-to-Talk (PTT) Solution for Verizon – Developed cluster level test (CLT) plan covering end-to-end call processing, customer scenarios and adversarial testing.  Created and executed software test scripts from requirements. Utilizing call load tools to produce automated testing of customer scenarios.                 
-                 </li>
-                 <li>
-                    Cluster level testing (CLT) for Qualcomm Qchat PTT Solution for China Telecom (CTC) and Sprint: Developed test plan covering testing strategy and testing scenarios used to identify faults before they are uncovered on customer’s site. Wrote and executed test scripts covering adversarial conditions.
-                 </li>
-                 <li>
-                    Call processing lead for Qchat PTT. Tracking defects and interfacing with customer/vendors
-                 </li>
-                 <li>
-                    Maintained and programmed the mobiles used in Qchat testing.
-                 </li>
-                 <li>
-                    Lab Coordinator/Architect for CTC Qchat Lab.
-                 </li>
-                 <li>
-                    Numerous faults/defects were uncovered and fixed prior to the product being installed on the customers site, where fixing them is much more costly in money and reputation.
-                 </li>
-                 <li>
-                 Qchat functionality on FemtoCell - Comprehensive testing of  Qchat PTT application utilizing a FemtoCell technology.
-                 </li>
-            </ul>
-        </section>
-    </body>
+
+	<ul>
+	   <li><a href="resume.html" title="Professional Resume">Professional Resume</a></li>
+       <li><a href="hobbies.html" title="Interests and Hobbies">Interests and Hobbies</a></li>
+    </ul>
+</body>
 </html>
