--- a/hobbies.html
+++ b/hobbies.html
@@ -1,1 +1,12 @@
-<!-- will hold hobbies, interests, and projects -->
+<!DOCTYPE html>
+<html>
+
+<head>
+
+</head>
+	
+<body>
+ 
+</body>
+
+</html><!-- will hold hobbies, interests, and projects -->
