--- a/resume.html
+++ b/resume.html
@@ -8,14 +8,15 @@
 	
 <body>
     <section id="personal_info">
+    <h2>Personal Information:</h2>
         <p>John Chiodo<br>
         Aurora, IL. 60504<br>
         jchiodo5804@gmail.com<br>
         (630) 555-1212<br>
         </p>
     </section>
-	<section id="skillSummary"> <!-- plan to make table with these -->
-		<h2>Skill Summary</h2>
+    <section id="skillSummary"> <!-- plan to make table with these -->
+	<h2>Skill Summary</h2>
 		<ul>
             <li>Functional Requirements testing</li>
             <li>Test Plans and Cases</li>
@@ -28,14 +29,18 @@
             <li>Tool development</li>
         </ul>
 	</section>
-<h1>Professional Experience</h1>
+
+    <h1>Professional Experience</h1>
     <section id="HCL">
+        <h2>Job Experience1</h2>
         <p>HCL America 2011-present</p>
     </section>  
     <section id="HCL_date">
+        <h2>Job Experience1</h2>
         <p>EVDO Network Level Testing (NLT) – 2011-present</p>
     </section> 
     <section id="HCL_experience">
+        <h2>Job Experience1</h2>
         <p> EVDO Call model Development – Developed, maintained and executed NLT 1xEV-DO call
         loads testing using in-house call load generators to mimic customer field offices.</p>
         <ul>
@@ -46,14 +51,17 @@
         </ul>
     </section>
     <section id="ALU">
-    <p>Alcatel-Lucent Technologies</p>
+        <h2>Job Experience2</h2>
+        <p>Alcatel-Lucent Technologies</p>
     </section>
     <section id="ALU_date">
-    <p>1xEV-DO Applications (Qchat and VOIP) Software Development and Testing – 2004-2011</p>
+        <h2>Job Experience2</h2>
+        <p>1xEV-DO Applications (Qchat and VOIP) Software Development and Testing – 2004-2011</p>
     </section>
-     <section id="ALU_experience"> <!-- these are long, maybe will shorten -->
+    <section id="ALU_experience"> <!-- these are long, maybe will shorten -->
                                    <!-- and expand with links on page2 -->
-         <p>
+         <h2>Job Experience2</h2>
+            <p>
              <ul>
                  <li>
                      Capacity, Performance and Resiliency (CPR) testing for 1xEV-DO product:  Created and executed tests covering fault recovery, regression, application processor and traffic processor overload scenarios. Using a combination of load generators (simulated mobiles) and field grade mobiles to uncover and identify software problems.
@@ -83,4 +91,5 @@
         </section>
     </body>
 </html>
+
 
