Changed and updated headers

--- a/resume.html
+++ b/resume.html
@@ -32,15 +32,12 @@
 
     <h1>Professional Experience</h1>
     <section id="HCL">
-        <h2>Job Experience1</h2>
-        <p>HCL America 2011-present</p>
+        <h2>HCL America</h2>
     </section>  
     <section id="HCL_date">
-        <h2>Job Experience1</h2>
-        <p>EVDO Network Level Testing (NLT) – 2011-present</p>
+        <h2>EVDO Network Level Testing (NLT) – 2011-present</h2>
     </section> 
     <section id="HCL_experience">
-        <h2>Job Experience1</h2>
         <p> EVDO Call model Development – Developed, maintained and executed NLT 1xEV-DO call
         loads testing using in-house call load generators to mimic customer field offices.</p>
         <ul>
@@ -51,17 +48,13 @@
         </ul>
     </section>
     <section id="ALU">
-        <h2>Job Experience2</h2>
-        <p>Alcatel-Lucent Technologies</p>
+        <h2>Alcatel-Lucent Technologies</h2>
     </section>
     <section id="ALU_date">
-        <h2>Job Experience2</h2>
         <p>1xEV-DO Applications (Qchat and VOIP) Software Development and Testing – 2004-2011</p>
     </section>
     <section id="ALU_experience"> <!-- these are long, maybe will shorten -->
                                    <!-- and expand with links on page2 -->
-         <h2>Job Experience2</h2>
-            <p>
              <ul>
                  <li>
                      Capacity, Performance and Resiliency (CPR) testing for 1xEV-DO product:  Created and executed tests covering fault recovery, regression, application processor and traffic processor overload scenarios. Using a combination of load generators (simulated mobiles) and field grade mobiles to uncover and identify software problems.
