more added to resume

--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
     <section id="ALU_date">
         <p>1xEV-DO Applications (Qchat and VOIP) Software Development and Testing – 2004-2011</p>
     </section>
-    <section id="ALU_experience"> <!-- these are long, maybe will shorten -->
+    <section id="ALU_experience1"> <!-- these are long, maybe will shorten -->
                                    <!-- and expand with links on page2 -->
              <ul>
                  <li>
@@ -82,6 +82,50 @@
                  </li>
             </ul>
         </section>
+        <section id="ALU_date">
+        <p>Database Software Development – 1995-2004</p>
+        </section>
+        <section id="ALU_experience2"> 
+             <ul>
+                 <li>Developed code  targeted for  Lucent Technologies wireless database application on the radio network controller. Using C and shell programming languages, delivered functional and tested code modules overall generic software load.
+                 </li>
+                 <li>
+                    <ul type=circle>
+                        <li>Coding database functions from requirements</li>
+                        <li>Extensive testing of modules delivered and support for future testing efforts.</li>
+                    </ul>
+                 </li>
+                 <li>Assisted in the development and testing a platform load tester for automated loading of the 1xEV-DO labs with the latest software release
+                 </li>
+            </ul>
+        </section>
+        <section id="ALU_date">
+        <p>Hardware Design and Testing – 1987-1995</p>
+        </section>
+        <section id="ALU_experience3"> 
+             <ul>
+                 <li>5ESS flash card design and simulation - Design and simulation of flash card technology in 5ESS product..
+                 </li>
+                 <li>
+                    <ul type=circle>
+                        <li>Extensive use of digital storage oscilloscopes and digital trace analyzers.
+                        </li>
+                    </ul>
+                 </li>
+                 <li>4ESS board level design, simulation and circuit layout - Design, simulation and layout of circuit packs in 4ESS platform 
+                 </li>
+                 <li>
+                     <ul type=circle>
+                         <li>Design of microprocessor board interfacing with local area network and optical interfaces.
+                         </li>
+                         <li>Programmed logic arrays and state machine design.
+                         </li>
+                         <li>Full computer simulation of design, including component placement and thermal analysis.
+                         </li>
+                     </ul>
+                 </li>
+            </ul>
+        </section>    
     </body>
 </html>
 
