--- a/Index.html
+++ b/Index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<title>Professional Web Presence</title>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-</head>
-	
+    <meta charset="utf-8" />
+    <title>Professional Web Presence</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>	
 <body>
-    <section id="personal_info">
-        <h2>Personal Information:</h2>
-        <p>John Chiodo<br>
-        Aurora, IL. 60504<br>
-        jchiodo5804@gmail.com<br>
-        (630) 555-1212<br>
-        </p>
-    </section>
-
-	<ul>
-	   <li><a href="resume.html" title="Professional Resume">Professional Resume</a></li>
-       <li><a href="hobbies.html" title="Interests and Hobbies">Interests and Hobbies</a></li>
-    </ul>
+    <div id="personalinfo">
+        <section id="personal_info">
+            <h2>Personal Information:</h2>
+            John Chiodo<br>
+            Aurora, IL. 60504<br>
+            jchiodo5804@gmail.com<br>
+            (630) 555-1212<br>
+        </section>
+    </div>
+    <div id="navigationbar">
+        <ul id=nav>
+	       <li><a href="resume.html" title="Professional Resume">Professional Resume</a></li>
+           <li><a href="hobbies.html" title="Interests and Hobbies">Interests and Hobbies</a></li>
+        </ul>
+    </div>
 </body>
 </html>
