Cleanup. div and section tags  preparing to add 3rd page

--- a/Index.html
+++ b/Index.html
@@ -7,14 +7,13 @@
 </head>	
 <body>
     <div id="personalinfo">
-        <section id="personal_info">
+        <section id="personalinfo">
             <h2>Personal Information:</h2>
-            John Chiodo<br>
-            Aurora, IL. 60504<br>
-            jchiodo5804@gmail.com<br>
-            (630) 555-1212<br>
+            John Chiodo
+            jchiodo5804@gmail.com
         </section>
     </div>
+    
     <div id="navigationbar">
         <ul id=nav>
 	       <li><a href="resume.html" title="Professional Resume">Professional Resume</a></li>
