more fixes, videos working, starting page3

--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="personalinfo">
         <section id="personalinfo">
-            <h2>Personal Information:</h2>
+            <h2>Personal Information</h2>
             John Chiodo
             jchiodo5804@gmail.com
         </section>
