Page3 nearly complete, finished content

--- a/Index.html
+++ b/Index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <title>Professional Web Presence</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>	
 <body>
-    <div id="personalinfo">
-        <section id="personalinfo">
-            <h2>Personal Information</h2>
-            John Chiodo
-            jchiodo5804@gmail.com
-        </section>
-    </div>
-    
-    <div id="navigationbar">
-        <ul id=nav>
-	       <li><a href="resume.html" title="Professional Resume">Professional Resume</a></li>
-           <li><a href="hobbies.html" title="Interests and Hobbies">Interests and Hobbies</a></li>
-        </ul>
-    </div>
+    <header>
+        <nav id=navbar>
+            <ul>
+                <li><a href="index.html">Index Page</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="hobbies.html">Hobbies</a></li>
+            </ul>
+        </nav>
+    </header>
+        
+    <section id="personalinfo">
+        <h2>Personal Information</h2>
+        <p>John Chiodo</p>
+        <p>jchiodo5804@gmail.com</p>
+    </section>
 </body>
 </html>
