added image, minor cleanup

--- a/Index.html
+++ b/Index.html
@@ -6,18 +6,19 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>	
 <body>
-    <header>
+    <header> <!--Navigation bar-->
         <nav id=navbar>
             <ul>
-                <li><a href="index.html">Index Page</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="index.html">John Chiodo's HomePage</a></li>
+                <li><a href="resume.html">John Chiodo's Resume</a></li>
+                <li><a href="hobbies.html">John Chiodo's Hobbies/Interests</a></li>
             </ul>
         </nav>
     </header>
-        
+    
     <section id="personalinfo">
-        <h1>Welcome to my page</h1>
+        <h1>John Chiodo's HomePage</h1>
+            <img src="images/placeholder.jpg" alt="John Chiodo placeholder image" width="182" height="222">
             <p>John Chiodo</p>
             <p>Aurora, IL. 60504</p>
             <p>jchiodo@hawk.iit.edu</p>
