--- a/hobbies.html
+++ b/hobbies.html
@@ -10,9 +10,9 @@
     <header> <!--Navigation bar-->
         <nav id=navbar>
             <ul>
-                <li><a href="index.html">Index Page</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="index.html">John Chiodo's HomePage</a></li>
+                <li><a href="resume.html">John Chiodo's Resume</a></li>
+                <li><a href="hobbies.html">John Chiodo's Hobbies/Interests</a></li>
             </ul>
         </nav>
     </header>
@@ -21,7 +21,7 @@
     <section id="limetech">
         <p>
             I like to build home PCs, my latest was a NAS 
-            <a href="https://en.wikipedia.org/wiki/Network-attached_storage"target="_blank"> 
+            <a href="https://en.wikipedia.org/wiki/Network-attached_storage" target="_blank"> 
             wiki: Network Attached Storage)</a>, which I am using to store media, 
             PC backups, etc.
         </p>
@@ -39,7 +39,7 @@
             </ul>
         
         <section id=limevideos>
-            <h3>Unraid offers more than basic storage, checkout it out the videos below:</h3>
+            <h3>Unraid offers more than basic storage, checkout it out theses 3 videos below:</h3>
                 <!--Show 3 videos: UNraid features, PC installation and MAC installation
                 Using the name/id/target with iframe, each link will display a separate video.
                 allowfullscreen as some of the text on the videos is to small to view
