--- a/resume.html
+++ b/resume.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     
-    <header>
+    <header> <!--Navigation bar-->
         <nav id=navbar>
             <ul>
-                <li><a href="index.html">Index Page</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="index.html">John Chiodo's HomePage</a></li>
+                <li><a href="resume.html">John Chiodo's Resume</a></li>
+                <li><a href="hobbies.html">John Chiodo's Hobbies/Interests</a></li>
             </ul>
         </nav>
     </header>
