--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
     <title>Professional Resume</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     
@@ -77,7 +78,7 @@
             </h3>
         </div>
         <div id="ALU_workexp1">
-             <ul>
+             <ul class="ALU_WE1">
                  <li>
                      Capacity, Performance and Resiliency (CPR) testing for 1xEV-DO product:  Created 
                      and executed tests covering fault recovery, regression, application processor and 
