--- a/hobbies.html
+++ b/hobbies.html
@@ -18,8 +18,8 @@
         </nav>
     </header>
     
-    <h1>John Chiodo's Hobbies</h1>
     <section id="limetech">
+        <h1>John Chiodo's Hobbies</h1>
         <section id="limetechdes">
         <p>
             I like to build home PCs, my latest was a NAS 
@@ -32,13 +32,15 @@
             There are many options if you want to make one yourself. I choose UNraid from 
             <a href="https://lime-technology.com/" target="_blank"> lime-technologies</a>. 
         </p>
-        <h2>Main reasons I chose Unraid:</h2>
-            <ul>
+        <div id="unraid">
+            <h2>Main reasons I chose Unraid:</h2>
+            <ul class="unraid_list">
                 <li>Can run on older hardware.</li>
                 <li>Can expand easily with different size drives.</li>
                 <li>Supports single and dual parity protection.</li>
                 <li>Support virtualization and Docker containers.</li>
             </ul>
+        </div>
         </section>
         <section id=limevideos>
             <h3>Unraid offers more than basic storage, checkout it out theses 3 videos below:</h3>
