Added google font

--- a/hobbies.html
+++ b/hobbies.html
@@ -5,6 +5,7 @@
     <title>Education and Hobbies</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=McLaren" rel="stylesheet"> 
 </head>
 <body>
     
