--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
     <title>Professional Resume</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href="css/Normalize.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
