Test of link, github.io not working for index page

--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <header> <!--Navigation bar-->
         <nav id="navbar">
             <ul>
-                <li><a href="index.html">John Chiodo's HomePage</a></li>
+                <li><a href="Index.html">John Chiodo's HomePage</a></li>
                 <li><a href="resume.html">John Chiodo's Resume</a></li>
                 <li><a href="hobbies.html">John Chiodo's Hobbies/Interests</a></li>
             </ul>
