--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
     <header> <!--Navigation bar-->
         <nav id=navbar>
             <ul>
-                <li><a href="index.html">John Chiodo's HomePage</a></li>
+                <li><a href="Index.html">John Chiodo's HomePage</a></li>
                 <li><a href="resume.html">John Chiodo's Resume</a></li>
                 <li><a href="hobbies.html">John Chiodo's Hobbies/Interests</a></li>
             </ul>
@@ -23,7 +23,7 @@
     <section id="personalinfo">
         <h2>Personal Information</h2>
          <p>John Chiodo</p>
-        <p>Aurora, IL. 60504</p>
+         <p>Aurora, IL. 60504</p>
          <p>jchiodo5804@gmail.com</p>
          <p>(630) 555-1212</p>
          <p><a href="">Linkedin Page</a></p>
