some practice with transitions and general restructing of css

--- a/hobbies.html
+++ b/hobbies.html
@@ -79,11 +79,11 @@
 
 
     <footer>
-        <p> Created by John Chiodo</p>
         <address>
-            <p><a href="mailto:jchiodo@hawk.iit.edu">jchiodo@hawk.iit.edu</a></p>
+            Created by John Chiodo<br>
+            <a href="mailto:jchiodo@hawk.iit.edu">jchiodo@hawk.iit.edu</a>
         </address>
-    </footer>
+    </footer> 
     
 </body>
 </html><!-- end hobbies.html -->
