--- a/resume.html
+++ b/resume.html
@@ -193,11 +193,11 @@
     </section> <!--end education-->
     
     <footer>
-        <p> Created by John Chiodo</p>
         <address>
-            <p><a href="mailto:jchiodo@hawk.iit.edu">jchiodo@hawk.iit.edu</a></p>
+            Created by John Chiodo<br>
+            <a href="mailto:jchiodo@hawk.iit.edu">jchiodo@hawk.iit.edu</a>
         </address>
-    </footer>
+    </footer> 
     
 </body>
 </html>
