--- a/hobbies.html
+++ b/hobbies.html
@@ -9,13 +9,16 @@
     <link href="https://fonts.googleapis.com/css?family=McLaren" rel="stylesheet"> 
 </head>
 <body>
+    <section id="hobbiestitle">
+        <h1>John Chiodo's Hobbies</h1>
+    </section>
     
     <header> <!--Navigation bar-->
         <nav id=navbar>
             <ul>
-                <li><a href="Index.html">John Chiodo's HomePage</a></li>
-                <li><a href="resume.html">John Chiodo's Resume</a></li>
-                <li><a href="hobbies.html">John Chiodo's Hobbies/Interests</a></li>
+                <li class="home"><a href="Index.html">Home</a></li>
+                <li class="resume"><a href="resume.html">Resume</a></li>
+                <li class="hobbies"><a class="active" href="hobbies.html">Hobbies</a></li>
             </ul>
         </nav>
     </header>
