--- a/resume.html
+++ b/resume.html
@@ -8,18 +8,19 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+    <section id="resumetitle">
+        <h1>John Chiodo's Resume</h1>
+    </section>
     <header> <!--Navigation bar-->
         <nav id=navbar>
             <ul>
-                <li><a href="Index.html">John Chiodo's HomePage</a></li>
-                <li><a href="resume.html">John Chiodo's Resume</a></li>
-                <li><a href="hobbies.html">John Chiodo's Hobbies/Interests</a></li>
+                <li class="home"><a href="Index.html">Home</a></li>
+                <li class="resume"><a class="active" href="resume.html">Resume</a></li>
+                <li class="hobbies"><a href="hobbies.html">Hobbies</a></li>
             </ul>
         </nav>
     </header>
-    
-    <h1>John Chiodo's Online Resume</h1>
+
     <section id="personalinfo">
         <h2>Personal Information</h2>
          <p>John Chiodo</p>
