github jekyl build error, some how I got a capital I in filename index.html

--- a/hobbies.html
+++ b/hobbies.html
@@ -16,7 +16,7 @@
         <h1>John Chiodo's Hobbies</h1>
         <nav id=navbar>
             <ul>
-                <li class="home"><a href="Index.html">Home</a></li>
+                <li class="home"><a href="index.html">Home</a></li>
                 <li class="resume"><a href="resume.html">Resume</a></li>
                 <li class="hobbies"><a class="active" href="hobbies.html">Hobbies</a></li>
             </ul>
