--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
         <h1>John Chiodo's Resume</h1>
         <nav id=navbar>
             <ul>
-                <li class="home"><a href="Index.html">Home</a></li>
+                <li class="home"><a href="index.html">Home</a></li>
                 <li class="resume"><a class="active" href="resume.html">Resume</a></li>
                 <li class="hobbies"><a href="hobbies.html">Hobbies</a></li>
             </ul>
