Last minute cleanup for 3/22

--- a/hobbies.html
+++ b/hobbies.html
@@ -9,9 +9,6 @@
     <link href="https://fonts.googleapis.com/css?family=McLaren" rel="stylesheet"> 
 </head>
 <body>
-    <section id="hobbiestitle">
-    </section>
-    
     <header> <!--Navigation bar-->
         <h1>John Chiodo's Hobbies</h1>
         <nav id=navbar>
@@ -57,6 +54,7 @@
                         src="https://www.youtube.com/embed/d4qDdf-fX60?rel=0&vq=hd1080" 
                         allowfullscreen>
                 </iframe>
+                 <!--convert these to a list, maybe with buttons-->
                 <a href="https://www.youtube.com/embed/d4qDdf-fX60?rel=0&vq=hd1080" target=limebox>
                         See UNraids many features...</a>
                 <a href="https://www.youtube.com/embed/hmfJg9KifS8?rel=0&vq=hd1080" target=limebox>
@@ -68,6 +66,7 @@
     
     <section id=futureenhancements>        
     <h3>Other future uses for my UNraid NAS:</h3>
+        <!--expand these with links to the unraid webpage or forum-->
         <ul>
             <li>Virtualize Win10 and CentOS linux box for general
                 websurfing, etc. 
