more cleanup and documentation

--- a/hobbies.html
+++ b/hobbies.html
@@ -24,8 +24,8 @@
 		</nav>
 	</header>
 
-	<section id="limetech">
-		<h1>John Chiodo's Hobbies</h1>
+	<div id="limetech">
+		<h1>Make an UNraid Server</h1>
 		<section id="limetechdes">
 			<p>
 				I like to build home PCs, my latest was a NAS
@@ -46,6 +46,7 @@
 				</ul>
 			</div>
 		</section>
+		
 		<section id=limevideos>
 			<h3>Unraid offers more than basic storage, checkout it out theses 3 videos below:</h3>
 			<!--Show 3 videos: UNraid features, PC installation and MAC installation
@@ -55,18 +56,19 @@
 			<iframe width="640" height="360" name="limebox" id="limebox" src="https://www.youtube.com/embed/d4qDdf-fX60?rel=0&vq=hd1080" allowfullscreen>
                 </iframe>
 			<!--convert these to a list, maybe with buttons-->
-			<a href="https://www.youtube.com/embed/d4qDdf-fX60?rel=0&vq=hd1080" target=limebox>
-                        See UNraids many features...</a>
-			<a href="https://www.youtube.com/embed/hmfJg9KifS8?rel=0&vq=hd1080" target=limebox>
-                    Easy installation instruction for PC...</a>
-			<a href="https://www.youtube.com/embed/9q7DmsGAaFk?rel=0&vq=hd1080" target=limebox>
-                    Easy installation instruction for MAC...</a>
+			<ul class="unraid_list">
+				<li><a href="https://www.youtube.com/embed/d4qDdf-fX60?rel=0&vq=hd1080" target=limebox>
+					See UNraids many features...</a></li>
+				<li><a href="https://www.youtube.com/embed/hmfJg9KifS8?rel=0&vq=hd1080" target=limebox>
+				Easy installation instruction for PC...</a></li>
+				<li><a href="https://www.youtube.com/embed/9q7DmsGAaFk?rel=0&vq=hd1080" target=limebox>
+				Easy installation instruction for MAC...</a></li>
+			</ul>
 		</section>
-		<!--end limevideos-->
-	</section>
-	<!--end limetech-->
+	</div>
+	
 
-	<section id=futureenhancements>
+	<section id=futureEnhancements>
 		<h3>Other future uses for my UNraid NAS:</h3>
 		<!--expand these with links to the unraid webpage or forum-->
 		<ul>
@@ -90,4 +92,3 @@
 </body>
 
 </html>
-<!-- end hobbies.html -->
