--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="homeWrapper">
 	<section id="personalInfoText">
 		<div id="personal">
-			<h1>Personal Info Slider Box</h1>
+			<h1>Personal Info Slider Box - hover cursor over tab</h1>
 		</div>
 		<div id="pbox">
 			<div id="smpic">
@@ -58,14 +58,13 @@
 				Thanks for visiting my site, please feel free to browse my resume or check out my latest home hobby.
 			</p>
 		</div>
-		<div class="clear"></div>
 	</section>
 
 	<footer>
 		<address>
-            Created by John Chiodo
-            <a href="mailto:jchiodo@hawk.iit.edu">jchiodo@hawk.iit.edu</a>
-        </address>
+    		Created by John Chiodo
+        <a href="mailto:jchiodo@hawk.iit.edu">jchiodo@hawk.iit.edu</a>
+    </address>
 	</footer>
  </div>
 </body>
