missed resume.html validation
fixed errors from validation, found a typo in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="homeWrapper">
 	<section id="personalInfoText">
 		<div id="personal">
-			<h1>Personal Info Slider Box - hover cursor over tab</h1>
+			<p>Personal Info Slider Box - hover cursor over tab</p>
 		</div>
 		<div id="pbox">
 			<div id="smpic">
@@ -44,7 +44,7 @@
 
 	<section id="history">
 		<div id=briefHistory>
-			<h1>Brief Work History:</h1>
+			<h2>Brief Work History:</h2>
 			<p>
 				Hello, my name is John Chiodo, I started my career in telecommunications with AT&amp;T in 1987, the company went thru many changes and so did my skill set. I originally came from a hardware backround and a few of my early positions at AT&amp;T were hardware design related.
 			</p>
