--- a/resume.html
+++ b/resume.html
@@ -29,30 +29,30 @@
 		<div id="top">
 
 			<section id="personalInfo">
-				<h1>John Chiodo</h1>
-				<h2>Test Engineer</h2>
+				<h2>John Chiodo</h2>
+				<h3>Test Engineer</h3>
 			</section>
 
 
-			<section id="contactInfo">
+			<div id="contactInfo">
 				<ul>
 					<li>e: <a href="mailto:jchiodo@hawk.iit.edu" target="_blank">jchiodo@hawk.iit.edu</a></li>
 					<li>w: <a href="https://jchiodo123.github.io/ITMD361-Project-Two/index.html">www.jchiodo.com</a></li>
 					<li>l: <a href="https://jchiodo123.github.io/ITMD361-Project-Two/index.html">Linkedin Page</a></li>
-					<li>m: <a href="tel:(630) 555-1212">(630) 555-1212</a></li>
+					<li>m: <a href="tel:6305551212">(630) 555-1212</a></li>
 				</ul>
-			</section>
+			</div>
 
 			<div class="clear"></div>
 		</div>
 
 		<div id="bottom">
 			<section id="skills">
-				<div id="sectionTitle">
-					<h1>Skill Summary</h1>
+				<div class="sectionTitle">
+					<h2>Skill Summary</h2>
 				</div>
 
-				<div id="sectionContent">
+				<div class="sectionContent">
 					<ul>
 						<li>Functional Requirements testing</li>
 						<li>Regression and Adversarial testing</li>
@@ -74,10 +74,10 @@
     CSS tags placed in the document-->
 
 			<section id="hclExp">
-				<div id="sectionTitle>">
-					<h1>Work Experience</h1>
+				<div class="sectionTitle">
+					<h2>Work Experience</h2>
 				</div>
-				<div id="sectionContent">
+				<div class="sectionContent">
 					<h2>HCL America Inc. - AT&amp;T - Alcatel-Lucent Technologies</h2>
 					<p class="subTitle">2014-2016</p>
 					<p><span>EVDO Call model Development Engineer</span> – Developed, maintained and executed NLT 1xEV-DO call loads testing using in-house call load generators to mimic customer field offices.</p>
@@ -95,7 +95,7 @@
 			<!--end hclExp -->
 
 			<section id="alu1">
-				<div id="sectionContent">
+				<div class="sectionContent">
 					<h2>AT&amp;T - Alcatel-Lucent Technologies</h2>
 					<p class="subTitle">2011-2014
 						<p><span>Capacity, Performance and Resiliency (CPR) testing Engineer</span> - Created and executed tests covering fault recovery, regression, application processor and traffic processor overload scenarios. Using a combination of load generators (simulated mobiles) and field grade mobiles to uncover and identify software problems.
@@ -107,7 +107,7 @@
 			<!--end ALU1-->
 
 			<section id="alu2">
-				<div id="sectionContent">
+				<div class="sectionContent">
 					<h2>AT&amp;T - Alcatel-Lucent Technologies</h2>
 					<p class="subTitle">2004-2011</p>
 					<p><span>1xEV-DO Applications (Qchat and VOIP) Software Development and Testing</span> - Motorola Push-to-Talk (PTT) Solution for Verizon – Developed cluster level test (CLT) plan covering end-to-end call processing, customer scenarios and adversarial testing.</p>
@@ -140,7 +140,7 @@
 			</section>
 
 			<section id="alu3">
-				<div id="sectionContent">
+				<div class="sectionContent">
 					<h2>AT&amp;T - Lucent Technologies</h2>
 					<p class="subTitle">1995-2004</p>
 					<p><span>Database Software Development</span> - Developed code targeted for Lucent Technologies wireless database application on the radio network controller. Using C and shell programming languages, delivered functional and tested code modules overall generic software load.
@@ -159,27 +159,23 @@
 			<!--end alu3-->
 
 			<section id="att">
-				<div id="sectionContent">
+				<div class="sectionContent">
 					<h2>AT&amp;T - (American Telephone &amp; Telegraph)</h2>
 					<p class="subTitle">1987-1995</p>
 					<p>
-						<Hardware Design and Testing – 1987-1995</p>
+						Hardware Design and Testing – 1987-1995</p>
 
 							<div id="attList">
 								<ul>
 									<li><span>5ESS flash card design and simulation</span>span> - Design and simulation of flash card technology in 5ESS product. Required extensive use of digital storage oscilloscopes and digital trace analyzers.</li>
 									<li><span>4ESS board level design, simulation and circuit layout</span> - Design, simulation and layout of circuit packs in 4ESS platform
 									</li>
-									<div id="attList2">
-										<ul>
-											<li>Design of microprocessor board interfacing with local area network and optical interfaces.
-											</li>
-											<li>Programmed logic arrays and state machine design.
-											</li>
-											<li>Full computer simulation of design, including component placement and thermal analysis.
-											</li>
-										</ul>
-									</div>
+									<li>Design of microprocessor board interfacing with local area network and optical interfaces.
+									</li>
+									<li>Programmed logic arrays and state machine design.
+									</li>
+									<li>Full computer simulation of design, including component placement and thermal analysis.
+									</li>
 								</ul>
 							</div>
 				</div>
@@ -188,12 +184,12 @@
 			<!--end ATT-->
 
 			<section id="education">
-				<div id="sectionTitle">
-					<h1>Education History</h1>
+				<div class="sectionTitle">
+					<h3>Education History</h3>
 				</div>
-				<div id="edList">
+				<div class="sectionContent2"> <!--div id="edList">-->
 					<ul>
-						<li>Illinois Institute of Technology - Web Design and Application Development Certificate</li>
+						<li>Illinois Institute of Technology-Web Design and Application Development Certificate</li>
 						<li>B.S.E.E.T - DeVry Institute of Technology / Chicago. IL.</li>
 						<li>Alcatel-Lucent Scalable IP Networks (certification course)</li>
 						<li>Introduction to TCL Programming</li>
