changes to index page
added a custom border to index page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				Thoughout the years I shifted my skills to programming in assembly and C. I found an opening in the wireless division and soon realized there was a void in the testing area. I applied my skills to unit level and cluster/network level testing.
 			</p>
 			<p>
-				I have worked with many different cell types, servers and cellular protocols mobile phones and networks.
+				I have worked with many different cell types, servers, cellular protocols, mobile phones and networks.
 			</p>
 			<p>
 				Thanks for visiting my site, please feel free to browse my resume or check out my latest home hobby.
