--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h1>John Chiodo's HomePage</h1>
 		<nav id="navbar">
 			<ul>
-				<li class="home"><a class="active" href="Index.html">Home</a></li>
+				<li class="home"><a class="active" href="index.html">Home</a></li>
 				<li class="resume"><a href="resume.html">Resume</a></li>
 				<li class="hobbies"><a href="hobbies.html">Hobbies</a></li>
 			</ul>
