--- a/index.html
+++ b/index.html
@@ -2,68 +2,105 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8" />
-	<title>Professional Web Presence</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link href="css/Normalize.css" rel="stylesheet" type="text/css">
-	<link href="css/styles.css" rel="stylesheet" type="text/css">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta charset="utf-8" />
+  <title>Professional Web Presence</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  <link href="css/Normalize.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+  <!-- jQuery library (served from Google) -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <!-- bxSlider Javascript file -->
+  <script src="/js/jquery.bxslider.min.js"></script>
+  <!-- bxSlider CSS file -->
+  <link href="/lib/jquery.bxslider.css" rel="stylesheet" />
 
 </head>
 
 <body>
-	<header>
-		<!--Navigation bar-->
-		<h1>John Chiodo's HomePage</h1>
-		<nav id="navbar">
-			<ul>
-				<li class="home"><a class="active" href="index.html">Home</a></li>
-				<li class="resume"><a href="resume.html">Resume</a></li>
-				<li class="hobbies"><a href="hobbies.html">Hobbies</a></li>
-			</ul>
-		</nav>
-	</header>
- 
+  <header>
+    <!--Navigation bar-->
+    <h1>John Chiodo's HomePage</h1>
+    <nav id="navbar">
+      <ul>
+        <li class="home"><a class="active" href="index.html">Home</a></li>
+        <li class="resume"><a href="resume.html">Resume</a></li>
+        <li class="hobbies"><a href="hobbies.html">Hobbies</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <div id="homeWrapper">
-		<div id="personal">
-			<p>Personal Info Slider Box - hover cursor over tab</p>
-		</div>
-		<div id="pbox">
-			<div id="smpic">
-				<img src="images/placeholder.jpg" alt="John Chiodo placeholder image" width="102" height="122">
-			</div>
-			<div id="smtext">
-				<p class="name">John Chiodo</p>
-				<p class="address">Aurora, IL. 60504</p>
-				<p class="email">jchiodo@hawk.iit.edu</p>
-			</div>
-		</div>
+    <div id="personal">
+      <p>Personal Info Slider Box on left - hover cursor over tab</p>
+    </div>
+    <div id="pbox">
+      <div id="smpic">
+        <img src="images/placeholder.jpg" alt="John Chiodo placeholder image" width="102" height="122">
+      </div>
+      <div id="smtext">
+        <p class="name">John Chiodo</p>
+        <p class="address">Aurora, IL. 60504</p>
+        <p class="email">jchiodo@hawk.iit.edu</p>
+      </div>
+    </div>
 
-	<section id="history">
-		<div id=briefHistory>
-			<h2>Brief Work History:</h2>
-			<p>
-				Hello, my name is John Chiodo, I started my career in telecommunications with AT&amp;T in 1987, the company went thru many changes and so did my skill set. I originally came from a hardware backround and a few of my early positions at AT&amp;T were hardware design related.
-			</p>
-			<p>
-				Thoughout the years I shifted my skills to programming in assembly and C. I found an opening in the wireless division and soon realized there was a void in the testing area. I applied my skills to unit level and cluster/network level testing.
-			</p>
-			<p>
-				I have worked with many different cell types, servers, cellular protocols, mobile phones and networks.
-			</p>
-			<p>
-				Thanks for visiting my site, please feel free to browse my resume or check out my latest home hobby.
-			</p>
-		</div>
-	</section>
+    <div id='slidercontainer'>
+      <div id='slidertitle'>
+        <p><span>Waterfalls</span></p>
+      </div>
+      <ul class="bxslider">
+        <li><img src="/images/waterfall1.jpg" /></li>
+        <li><img src="/images/waterfall2.jpg" /></li>
+        <li><img src="/images/waterfall3.jpg" /></li>
+        <li><img src="/images/waterfall4.jpg" /></li>
+        <li><img src="/images/waterfall5.jpg" /></li>
+        <li><img src="/images/waterfall6.jpg" /></li>
+        <li><img src="/images/waterfall7.jpg" /></li>
+        <li><img src="/images/waterfall8.jpg" /></li>
+        <li><img src="/images/waterfall9.jpg" /></li>
+      </ul>
+    </div>
 
-	<footer>
-		<address>
+
+    <section id="history">
+      <div id=briefHistory>
+        <h2>Brief Work History:</h2>
+        <p>
+          Hello, my name is John Chiodo, I started my career in telecommunications with AT&amp;T in 1987, the company went thru many changes and so did my skill set. I originally came from a hardware backround and a few of my early positions at AT&amp;T were hardware design related.
+        </p>
+        <p>
+          Thoughout the years I shifted my skills to programming in assembly and C. I found an opening in the wireless division and soon realized there was a void in the testing area. I applied my skills to unit level and cluster/network level testing.
+        </p>
+        <p>
+          I have worked with many different cell types, servers, cellular protocols, mobile phones and networks.
+        </p>
+        <p>
+          Thanks for visiting my site, please feel free to browse my resume or check out my latest home hobby.
+        </p>
+      </div>
+    </section>
+
+    <footer>
+      <address>
     		Created by John Chiodo
         <a href="mailto:jchiodo@hawk.iit.edu">jchiodo@hawk.iit.edu</a>
     </address>
-	</footer>
- </div>
+    </footer>
+  </div>
+
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $('.bxslider').bxSlider({
+        mode: 'vertical',   <!--verical slideshow-->
+        slideWidth: 850,    <!--container and picture width-->  
+        auto: true,         <!--autoplay slideshow--> 
+        autoControls: true  <!--autoplay controls, pause/play--> 
+      });
+    });
+  </script>
 </body>
 
 </html>
