--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
         <p><span>Waterfalls</span></p>
       </div>
       <ul class="bxslider">
-        <li><img src="images/waterfall1.jpg" /></li>
-        <li><img src="images/waterfall2.jpg" /></li>
-        <li><img src="images/waterfall3.jpg" /></li>
-        <li><img src="images/waterfall4.jpg" /></li>
-        <li><img src="images/waterfall5.jpg" /></li>
-        <li><img src="images/waterfall6.jpg" /></li>
-        <li><img src="images/waterfall7.jpg" /></li>
-        <li><img src="images/waterfall8.jpg" /></li>
-        <li><img src="images/waterfall9.jpg" /></li>
+        <li><img src="images/waterfall1.jpg" alt="Picture of waterfall"/></li>
+        <li><img src="images/waterfall2.jpg" alt="Picture of waterfall"/></li>
+        <li><img src="images/waterfall3.jpg" alt="Picture of waterfall"/></li>
+        <li><img src="images/waterfall4.jpg" alt="Picture of waterfall"/></li>
+        <li><img src="images/waterfall5.jpg" alt="Picture of waterfall"/></li>
+        <li><img src="images/waterfall6.jpg" alt="Picture of waterfall"/></li>
+        <li><img src="images/waterfall7.jpg" alt="Picture of waterfall"/></li>
+        <li><img src="images/waterfall8.jpg" alt="Picture of waterfall"/></li>
+        <li><img src="images/waterfall9.jpg" alt="Picture of waterfall"/></li>
       </ul>
     </div>
 
