--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- jQuery library (served from Google) -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> 
+<!--  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+  </script>-->
   <!-- bxSlider Javascript file -->
   <script src="/js/jquery.bxslider.min.js"></script>
   <!-- bxSlider CSS file -->
