--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- jQuery library (served from Google) -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> 
+  <script type="text/javascript" src="script/jquery-3.2.1.min.js"></script>
+<!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
 <!--  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
   </script>-->
   <!-- bxSlider Javascript file -->
