--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- jQuery library (served from Google) -->
-  <script type="text/javascript" src="script/jquery-3.2.1.min.js"></script>
-<!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
-<!--  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
-  </script>-->
+  <script type="text/javascript" src="script/jquery-3.2.1.js"></script>
+  <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
+  <!--  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>-->
   <!-- bxSlider Javascript file -->
   <script src="/js/jquery.bxslider.min.js"></script>
   <!-- bxSlider CSS file -->
