--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
   <!--  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>-->
   <!-- bxSlider Javascript file -->
-  <script src="/js/jquery.bxslider.js"></script>
+  <script src="js/jquery.bxslider.js"></script>
   <!-- bxSlider CSS file -->
-  <link href="/lib/jquery.bxslider.css" rel="stylesheet" />
+  <link href="lib/jquery.bxslider.css" rel="stylesheet" />
 
 </head>
 
