changed to horizontal slide
changed to horizontal slide

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <script type="text/javascript">
     $(document).ready(function() {
       $('.bxslider').bxSlider({
-        mode: 'vertical',   <!--verical slideshow-->
+        mode: 'horizontal',  <!--verical slideshow-->
         slideWidth: 850,    <!--container and picture width-->  
         auto: true,         <!--autoplay slideshow--> 
         autoControls: true  <!--autoplay controls, pause/play--> 
